apps/teste-orlando/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teste-orlando
  labels:
    kubernetes.io/metadata.name: teste-orlando
    backstage.io/kubernetes-id: teste-orlando
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
