apps/teste-orlando/base/teste-orlando-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teste-orlando-svc
  namespace: teste-orlando
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste-orlando.diegoluisi.eti.br
  labels:
    app: teste-orlando
    version: 0.0.1
    backstage.io/kubernetes-id: teste-orlando
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste-orlando
