apps/teste-orlando/base/teste-orlando-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-orlando-vs
  namespace: teste-orlando
  labels:
    app: teste-orlando
    version: 0.0.1
    backstage.io/kubernetes-id: teste-orlando
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste-orlando.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: teste-orlando-svc
      weight: 100
